test/Fail/Issue1698-primitive.err
Issue1698-primitive.agda:2.3-21: error: [Syntax.WrongContentBlock]
Unexpected declaration
